--- a/client/views/index.html
+++ b/client/views/index.html
@@ -12,8 +12,57 @@
 		    #messages li { padding: 5px 10px; }
 		    #messages li:nth-child(odd) { background: #eee; }
 		</style>
+		<script>
+			function getCookie(cookieName) {
+			    var name = cookieName + "=";
+			    var cookieArray = document.cookie.split(";");
+			    for(var i=0; i<cookieArray.length; i++) {
+			        var c = cookieArray[i];
+			        while (c.charAt(0)==" ") {
+			        	c = c.substring(1);
+			        }
+			        if (c.indexOf(name) == 0) {
+			            return c.substring(name.length, c.length);
+			        }
+			    }
+			    return "";
+			}
+
+			function logIn(user) {
+				socket.emit('chat message', user + "connected");
+			}
+
+			function setCookie(cookieName, cookieValue, numberOfDays) {
+				if (cookieValue == "") {
+					return true;
+				}
+				var d = new Date();
+				d.setTime(d.getTime() + (numberOfDays * 24 * 60 * 60 * 1000));
+				console.log("cookie expires " + d.toGMTString());
+				var expires = "expires=" + d.toGMTString();
+				
+				document.cookie = cookieName+"="+cookieValue+"; "+expires + "; path=/";
+				return false;
+			}
+
+			function checkCookie() {
+				var user = getCookie("username");
+				if (user != "") {
+					logIn(user);
+				}else {
+					user = prompt("Your username pls: ","");
+					if (user != "" && user != null) {
+			           setCookie("username", user, 30);
+			       	} else {
+			       		user = "anonymous";
+			       	}
+					logIn(user);
+				}
+			}
+		</script>
 	</head>
-	<body>
+	<body onload="checkCookie()">
+
 		<ul id="messages"></ul>
 		<form action="">
 			<input id="m" autocomplete="off" /><button>Send</button>
@@ -23,7 +72,7 @@
 		<script>
 		  var socket = io();
 		  $('form').submit(function(){
-		    socket.emit('chat message', $('#m').val());
+		    socket.emit('chat message', getCookie("username") + ": " + $('#m').val());
 		    $('#m').val('');
 		    return false;
 		  });
