Ugly scroll fix

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -5,12 +5,14 @@
 		<link rel="stylesheet" type="text/css" href="/css/index.css">
 		<script src="/js/cookieHandler.js"></script>
 		<script src="/js/sound.js"></script>
+		<script src="/js/scroll.js"></script>
 	</head>
 	<body onload="checkCookie()">
-
-		<ul id="messages"></ul>
-		<div id="sound"></div>
-		<form action="">
+		<div id="messagebody">
+			<ul id="messages"></ul>
+			<div id="sound"></div>
+		</div>
+		<form id="form" action="">
 			<input id="m" autocomplete="off" /><button>Send</button>
 		</form>
 		<script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
@@ -25,14 +27,16 @@
 			socket.on('announce', function(msg){
 				$('#messages').append($('<li>').text(msg));
 			});
+			var id = 0;
 			socket.on('chat message', function(msg){
 				 // @param filename The name of the file WITHOUT ending
-				$('#messages').append($('<li>').text(msg));
+				$('#messages').append($('<li id="' + id + '">').text(msg));
 				playSound('notification');
+				scroll(id);
+				id++;
 			});
 			socket.on('disconnect', function(){
-				socket.emit('announce', getCookie("username") + " disconnected" + $('#m').val());
-				$('#m').val('');
+				$('#messages').append($('<li>').text( + " disconnected"));
 				playSound('disconnect');
 			});
 		</script>
